<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    
    <string name="title_all_contacts">All contacts</string>
    <string name="title_favorites">Favorites</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_search">Search</string>
    <string name="action_view_as">View as</string>
    <string name="action_view_as_list">List</string>
    <string name="action_view_as_big_grid">Big grid</string>
    <string name="action_view_as_medium_grid">Medium grid</string>
    <string name="action_view_as_small_grid">Small grid</string>
    <string name="action_help_me">Help me !</string>
    
    <string name="menu_call">Call</string>
    <string name="menu_send_sms">Send SMS</string>
    <string name="menu_send_email">Send email</string>
    <string name="menu_add_favorite">Add to favorites</string>
    <string name="menu_remove_favorite">Remove from favorites</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    
    <string name="empty_list">It\'s empty here !</string>
    
    <string name="search_hint">Search people</string>
    
    <string name="phone">Phone</string>
    <string name="email">Email</string>    
    
    <!-- Preferences -->
    <string name="preferences_ui_title">UI</string>
    <string name="preference_ui_picture_style_title">Rounded avatars</string>
    <string name="preference_ui_picture_style_summary">If enabled, the avatars will be rounded</string>
    <string name="preference_ui_effects_title">Transition effect</string>
    <string name="preference_ui_effects_summary">Choose the effect of the slide</string>
    <string name="preference_ui_sort_by_last_name_title">Sort by last name</string>
    <string name="preference_ui_sort_by_last_name_summary">Default sorting by first name</string>
    <string name="preference_ui_list_grid_effects_title">List &amp; Grid items animation</string>
    <string name="preference_ui_list_grid_effects_summary">Enable the animation on list &amp; grid items</string>
    <string name="preference_about_title">About</string>
    <string name="preference_credits_title">Credits</string>
    <string name="preference_credits_apis_title">APIs</string>
    <string name="preference_credits_tools_title">Tools</string>
    <string name="preference_changelog_title">Change log</string>
    
    <!-- Jazzy effects -->
    <string name="standard">Standard</string>
    <string name="tablet">Tablet</string>
    <string name="cube_in">CubeIn</string>
    <string name="cube_out">CubeOut</string>
    <string name="flip_vertical">FlipVertical</string>
    <string name="flip_horizontal">FlipHorizontal</string>
    <string name="stack">Stack</string>
    <string name="zoom_in">ZoomIn</string>
    <string name="zoom_out">ZoomOut</string>
    <string name="rotate_up">RotateUp</string>
    <string name="rotate_down">RotateDown</string>
    <string name="accordion">Accordion</string>
    
    <!-- About -->
    <string name="about_version">Version %1$s</string>
    <string name="about_activity_title">About</string>
    <string name="about_copyright">Copyright © %1$d Abewy</string>
    <string name="about_all_rights_reserved">All rights reserved</string>
    
    <!-- InApp Billing -->
    <string name="thank_you">Thank you !</string>
    <string name="thank_you_purchase">Thank you for helping me out !</string>
    <string name="donate_again">You already donated this amout. Do you want to donate again ?</string>
    
    <!-- Help me -->
    <string name="help_me_title">Do you like my apps ?</string>
    <string name="help_me_text">Do you like my apps ?\nDo you want me to create new beautiful apps ?\nIf so, please support me !\nI decided not to use the freemium model (pay to get access to some features) so the app is totally free.\nA small donation would help me continue the development of this app and create new awesome apps.</string>
    <string name="my_next_app">My next app</string>
    <string name="donate">Donate</string>
    <string name="donate_hint">Clicking the check mark will display a dialog to validate your donation. You can donate multiple times.</string>
    <string name="my_apps">My apps</string>
    <string name="see_more">See more</string>
    
    <!-- Changelog -->
    <string name="changelog">Changelog</string>
    
    <!-- Showcase -->
    <string name="showcase_title">Welcome to Contacts</string>
    <string name="showcase_swipe_left">Swipe left to see your favorites contacts and your groups</string>
    <string name="showcase_swipe_right">Swipe right to see all your contacts</string>
    
    <!-- Contact details -->
    <string name="delete_dialog_message">This contact will be deleted</string>

</resources>
