<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_add_contact"
        android:icon="@drawable/ic_action_add_person"
        android:orderInCategory="98"
        android:showAsAction="ifRoom"
        android:title="@string/action_add_contact"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>